--- a/data-analyst.html
+++ b/data-analyst.html
@@ -121,7 +121,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SpectraMedix/743999698579153-health-care-data-analyst'>SpectraMedix Health Care Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SpectraMedix/743999698579153-health-care-data-analyst'>SpectraMedix Health Care Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -245,7 +245,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShoreConsulting/743999698516054-senior-business-data-analyst-health-sector-experience-qa-experience-'>Shore Consulting Senior Business Data Analyst (Health Sector Experience/QA experience) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ShoreConsulting/743999698516054-senior-business-data-analyst-health-sector-experience-qa-experience-'>Shore Consulting Senior Business Data Analyst (Health Sector Experience/QA experience) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -269,7 +269,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/desmos/66ffa184-9a07-40ca-91d3-346b1e648dbd'>Desmos - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/desmos/66ffa184-9a07-40ca-91d3-346b1e648dbd'>Desmos - Data Analyst</a></h5> 
 <p><span class="badge badge-light">United States San Francisco</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -285,7 +285,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451726-data-analyst'>Bosch Group Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451726-data-analyst'>Bosch Group Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -337,7 +337,7 @@
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/medallia/7b36f37c-5f4d-4c39-a787-182ff4b1f5f9'>Medallia - Senior Data Analyst, People Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medallia/7b36f37c-5f4d-4c39-a787-182ff4b1f5f9'>Medallia - Senior Data Analyst, People Analytics</a></h5> 
 <p><span class="badge badge-light">Pleasanton, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -405,7 +405,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://theice.referrals.selectminds.com/jobs/data-analyst-1104'>Data Analyst - Intercontinental Exchange Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theice.referrals.selectminds.com/jobs/data-analyst-1104'>Data Analyst - Intercontinental Exchange Careers</a></h5> 
 <p><span class="badge badge-light">Australia, VIC, Southbank</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -429,7 +429,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -441,11 +441,11 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=sFU2Kgw6&__jvsc=Twitter&bid=nNHSmMwZ'>Benefitfocus Careers - Data Analyst II</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=sFU2Kgw6&__jvsc=Twitter&bid=nNHSmMwZ'>Benefitfocus Careers - Data Analyst II</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/jcpjcpbangalore/job/oXWrbfwf'>J.C. Penney India Careers - Analyst - SAS & Statistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/jcpjcpbangalore/job/oXWrbfwf'>J.C. Penney India Careers - Analyst - SAS & Statistics</a></h5> 
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
